[gd_scene load_steps=13 format=3 uid="uid://dp872nvjdbsc2"]

[ext_resource type="ArrayOccluder3D" uid="uid://cop123efet6j2" path="res://node_3d.occ" id="1_clbmh"]
[ext_resource type="Script" path="res://node_3d.gd" id="1_x3hdm"]
[ext_resource type="Script" path="res://camera.gd" id="2_6krsy"]
[ext_resource type="PackedScene" uid="uid://ck4wa4vxhhk1v" path="res://room.glb" id="2_fu476"]
[ext_resource type="PackedScene" uid="uid://bp60mhp6oh3vm" path="res://gui_panel_3d.tscn" id="5_qaqtc"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_gmnym"]
energy_multiplier = 2.63

[sub_resource type="Sky" id="Sky_85e0t"]
sky_material = SubResource("PhysicalSkyMaterial_gmnym")

[sub_resource type="Environment" id="Environment_inqbi"]
background_mode = 2
sky = SubResource("Sky_85e0t")
tonemap_mode = 3
tonemap_white = 6.0
fog_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bunpn"]
emission_enabled = true
emission = Color(0.372549, 0.0156863, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_exntj"]
material = SubResource("StandardMaterial3D_bunpn")
size = Vector3(390, 0.5, 1)

[sub_resource type="SphereMesh" id="SphereMesh_2ctj3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4es5y"]
albedo_color = Color(1, 0.294118, 0.243137, 1)

[node name="Node3d" type="Node3D"]
script = ExtResource("1_x3hdm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_inqbi")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.0425013, -0.520646, -0.852714, -0.86498, -0.407957, 0.292201, -0.500004, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true
shadow_bias = 0.02
shadow_normal_bias = 3.0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 200.0
sky_mode = 2

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="."]
occluder = ExtResource("1_clbmh")
bake_mask = 4294967293

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
script = ExtResource("2_6krsy")

[node name="AxisX" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
mesh = SubResource("BoxMesh_exntj")

[node name="AxisY" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.2, 0)
mesh = SubResource("BoxMesh_exntj")

[node name="Rooms" type="Node3D" parent="."]

[node name="Room" parent="Rooms" instance=ExtResource("2_fu476")]

[node name="RedSphere" type="MeshInstance3D" parent="Rooms/Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 2
mesh = SubResource("SphereMesh_2ctj3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_4es5y")

[node name="OmniLight3D" type="OmniLight3D" parent="Rooms/Room"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0)
light_color = Color(1, 0.909804, 0.537255, 1)
shadow_enabled = true
shadow_blur = 3.0
omni_range = 7.0

[node name="GUIPanel3D" parent="Rooms/Room" instance=ExtResource("5_qaqtc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3, 2, 3.3)

[node name="GUIPanel3D2" parent="Rooms/Room" instance=ExtResource("5_qaqtc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.3, 2, 3.3)

[node name="GUIPanel3D3" parent="Rooms/Room" instance=ExtResource("5_qaqtc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.3, 2, -3.3)

[node name="GUIPanel3D4" parent="Rooms/Room" instance=ExtResource("5_qaqtc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.3, 2, -3.3)

[node name="Room2" parent="Rooms" instance=ExtResource("2_fu476")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)

[node name="Room4" parent="Rooms" instance=ExtResource("2_fu476")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0)

[node name="Room30" parent="Rooms" instance=ExtResource("2_fu476")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10)

[node name="Room56" parent="Rooms" instance=ExtResource("2_fu476")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)

[node name="OcclusionCulling" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 217.0
offset_bottom = 42.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Occlusion culling: Enabled"

[node name="MeshLOD" type="Label" parent="."]
offset_left = 16.0
offset_top = 48.0
offset_right = 217.0
offset_bottom = 74.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Mesh LOD: Enabled"

[node name="DrawMode" type="Label" parent="."]
offset_left = 16.0
offset_top = 80.0
offset_right = 217.0
offset_bottom = 106.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Draw mode: Normal"

[node name="Help" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -39.0
offset_right = 56.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "O: Toggle occlusion culling
L: Toggle mesh LOD
Space: Cycle between draw modes
Escape or F10: Toggle mouse capture"

[node name="Performance" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -331.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 145.0
grow_horizontal = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "FPS: 60"
horizontal_alignment = 2
